Bug 295605 - problems with widget moving/resizing in state diagrams
Summary: problems with widget moving/resizing in state diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-09 12:40 UTC by Ralf Habacker
Modified: 2013-11-06 17:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-03-09 12:40:00 UTC
User-Agent:       Mozilla/5.0 (Windows NT 6.1; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

Several states on a state diagram could not be moved

Reproducible: Always

Steps to Reproduce:
1. Create a state diagram 
2. Add an inital and end state 
3. Try to move a state 
Actual Results:  
In many cases the state will be resized, which is very annoying.

Expected Results:  
The state should be moved


Moving is only possible on high zoom levels or with big state size.
Comment 1 Oliver Kellogg 2012-03-09 18:01:55 UTC
SVN commit 1284663 by okellogg:

UMLWidget::drawSelected():
- Don't draw the resize anchor if the widget is so small that the anchor
  would cover up most of the widget.

UMLWidgetController::isInResizeArea():
- If the widget itself is very small then make the resize area small, too.
  Reason: Else it becomes impossible to do a Move instead of Resize.



 M  +1 -0      ChangeLog  
 M  +10 -3     umbrello/controller/umlwidgetcontroller.cpp  
 M  +3 -1      umbrello/widgets/umlwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1284663