UMLWidget::drawSelected(): - Don't draw the resize anchor if the widget is so small that the anchor   would cover up most of the widget.

UMLWidgetController::isInResizeArea():
- If the widget itself is very small then make the resize area small, too.
  Reason: Else it becomes impossible to do a Move instead of Resize.

BUG: 295605

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1284663